<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Signupfrag"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/fragment_horizontal_margin"
    android:paddingTop="@dimen/fragment_vertical_margin"
    android:paddingRight="@dimen/fragment_horizontal_margin"
    android:paddingBottom="@dimen/fragment_vertical_margin"
    tools:context=".SignupFragment">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/action_sign_in"
        android:fontFamily="@font/bilbo_regular"
        android:gravity="center"
        android:textSize="43sp"
        android:textColor="@color/black"
        android:id="@id/text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <EditText
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="96dp"

        app:layout_constraintHeight_percent="0.07"
        android:paddingLeft="8dp"
        android:hint="UserName"
app:layout_constraintTop_toBottomOf="@id/text"
        android:background="@drawable/textbox"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/num"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"


        android:hint="Phone Number"
        android:paddingLeft="8dp"

        android:imeActionLabel="@string/action_sign_in_short"
        app:layout_constraintHeight_percent="0.07"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:background="@drawable/textbox"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />
    <EditText
        android:id="@+id/Email"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"

        android:hint="Email"
        android:paddingLeft="8dp"

        android:imeActionLabel="@string/action_sign_in_short"
        app:layout_constraintHeight_percent="0.07"
        android:imeOptions="actionDone"
        android:inputType="textEmailAddress"
        android:background="@drawable/textbox"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/num" />
    <EditText
        android:id="@+id/pass"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"

        android:hint="Password"
        android:paddingLeft="8dp"

        android:imeActionLabel="@string/action_sign_in_short"
        app:layout_constraintHeight_percent="0.07"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:background="@drawable/textbox"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Email" />


    <Button
        android:id="@+id/signupbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:backgroundTint="@color/black"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:text="@string/action_sign_in"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="1dp"
        android:focusable="true"
        android:textSize="16sp"
        android:clickable="true"
        android:id="@+id/loginText"
        android:text="@string/already_have_an_account_login"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"

        app:layout_constraintTop_toBottomOf="@id/signupbtn" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />
</androidx.constraintlayout.widget.ConstraintLayout>